# Qwen3ASR.NET

./: .gitignore  .gitmodules  Directory.Build.props  Directory.Build.targets  Qwen3ASR.NET.slnx  README.ja.md  README.md
.github/workflows/: build.yml
Qwen3ASR.NET/: Class1.cs
docs/: gpu-config.ja.md  gpu-config.md  parameters.ja.md  parameters.md
patches/: candle-kernels-skip-moe.patch  qwen3-asr-cuda.patch  qwen3-asr-streaming-memory.patch
patches/candle-kernels/: build.rs
patches/candle-kernels/src/moe/: moe_wmma.cu
qwen3_asr_ffi/: Cargo.toml
qwen3_asr_ffi/src/: error.rs  ffi_types.rs  handle.rs  lib.rs  streaming.rs  transcriber.rs
samples/Qwen3ASR.NET.Realtime/: Program.cs  Qwen3ASR.NET.Realtime.csproj  VadFilter.cs
samples/Qwen3ASR.NET.Realtime/Properties/: launchSettings.json
samples/Qwen3ASR.NET.Sample/: Program.cs  Qwen3ASR.NET.Sample.csproj  VadFilter.cs
samples/Qwen3ASR.NET.Sample/Properties/: launchSettings.json
src/Qwen3ASR.NET/: Qwen3ASR.NET.csproj
src/Qwen3ASR.NET.Core/: Qwen3ASR.NET.Core.csproj  Qwen3Asr.cs  Qwen3AsrException.cs  StreamingTranscriber.cs
src/Qwen3ASR.NET.Core/Audio/: WavReader.cs
src/Qwen3ASR.NET.Core/Enums/: DeviceType.cs  Language.cs
src/Qwen3ASR.NET.Core/Models/: AudioFormat.cs  LoadOptions.cs  ModelDownloader.cs  StreamOptions.cs  TranscriptionOptions.cs  TranscriptionResult.cs
src/Qwen3ASR.NET.Core/Native/: NativeBindings.cs
src/Qwen3ASR.NET.Runtime.Linux-x64/: Qwen3ASR.NET.Runtime.Linux-x64.csproj
src/Qwen3ASR.NET.Runtime.OSX-arm64/: Qwen3ASR.NET.Runtime.OSX-arm64.csproj
src/Qwen3ASR.NET.Runtime.OSX-x64/: Qwen3ASR.NET.Runtime.OSX-x64.csproj
src/Qwen3ASR.NET.Runtime.Win-x64/: Qwen3ASR.NET.Runtime.Win-x64.csproj
tests/Qwen3ASR.NET.Tests/: Qwen3ASR.NET.Tests.csproj  Qwen3AsrTests.cs  StreamingTests.cs  WavReaderTests.cs
