[package]
name = "qwen3_asr_ffi"
version = "0.2.0"
edition = "2021"
description = "C-compatible FFI bindings for Qwen3-ASR"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actbit/Qwen3ASR.NET"
readme = "README.md"
keywords = ["speech-recognition", "asr", "qwen", "ffi", "whisper"]
categories = ["external-ffi-bindings", "multimedia::audio"]

[lib]
name = "qwen3_asr_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Qwen3-ASR Rust implementation (patched for CUDA contiguous tensor support)
qwen3_asr = { path = "../patches/qwen3-asr-rs/qwen3_asr" }

# Candle ML framework
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

# FFI and utilities
libc = "0.2"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging (optional)
log = "0.4"
env_logger = { version = "0.11", optional = true }

[features]
default = []
logging = ["env_logger"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

# Patch candle-kernels for RTX 20 series support (SM75+)
[patch.crates-io]
candle-kernels = { path = "../patches/candle/candle-kernels" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
